<resources>
    <string name="app_name">RUCafe</string>
    <string name="add_donut">\u003e</string>
    <string name="remove_donut">\u003c</string>
    <string name="your_order_title">Your Order</string>
    <string name="store_orders_title">Store Orders</string>
    <string name="order_num_label">Store Order Number</string>
    <string name="remove_button_name">Remove Item</string>
    <string name="remove_order_button_name">Remove Order</string>
    <string name="donut_title">Donuts</string>
    <string name="coffee_title">Coffee</string>
    <string-array name="donut_types">
        <item>Yeast Donut</item>
        <item>Cake Donut</item>
        <item>Donut Hole</item>
    </string-array>
    <string-array name="yeast_donut_flavors">
        <item>Jelly</item>
        <item>Vanilla</item>
        <item>Cinnamon</item>
        <item>Apple Cider</item>
        <item>Blueberry</item>
        <item>Pumpkin Spice</item>
    </string-array>
    <string-array name="cake_donut_flavors">
        <item>Chocolate</item>
        <item>Rainbow</item>
        <item>Sugar</item>
    </string-array>
    <string-array name="donut_hole_flavors">
        <item>Red Velvet</item>
        <item>Apple Fritter</item>
        <item>Powdered</item>
    </string-array>
    <string-array name="quantity">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
    </string-array>
    <string-array name="cupsize">
        <item>Short</item>
        <item>Tall</item>
        <item>Grande</item>
        <item>Venti</item>
    </string-array>
    <string name="add_order_button_title">Add To Store Orders</string>
    <string name="subtotal_label">Subtotal:</string>
    <string name="tax_label">Tax:</string>
    <string name="total_label">Total:</string>
    <string name="empty_order_alert">Current Order is Empty</string>
    <string name="empty_order_list_alert">Store Order List is Empty</string>
    <string name="remove_item_question">Remove Item?</string>
    <string name="remove_item_message">Removed Item From Order</string>
    <string name="add_order_question">Add to Store Orders?</string>
    <string name="add_order_message">Added Order to Store Orders</string>
    <string name="empty_donut_message">Please Enter a Positive Quantity</string>
    <string name="add">add</string>
    <string name="donut_name">Donut</string>
    <string name="coffee_name">Coffee</string>
    <string name="yes">YES</string>
    <string name="no">NO</string>
    <string name="zero_price">$0.00</string>
</resources>