<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000"
    android:visibility="visible"
    tools:context=".OrderActivity">

    <TextView
        android:id="@+id/yourOrderTitle"
        android:layout_width="412dp"
        android:layout_height="45dp"
        android:layout_marginTop="96dp"
        android:background="#FF0000"
        android:text="@string/your_order_title"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/labelTotal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="96dp"
        android:layout_marginTop="35dp"
        android:text="@string/total_label"
        android:textColor="#FFFFFF"
        android:textSize="16sp"
        app:layout_constraintStart_toEndOf="@+id/taxLabel"
        app:layout_constraintTop_toBottomOf="@+id/yourOrderTitle" />

    <TextView
        android:id="@+id/totalField"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="124dp"
        android:layout_marginTop="4dp"
        android:textColor="#FFFFFF"
        android:textSize="16sp"
        app:layout_constraintStart_toEndOf="@+id/taxField"
        app:layout_constraintTop_toBottomOf="@+id/labelTotal" />

    <TextView
        android:id="@+id/taxLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="72dp"
        android:layout_marginTop="35dp"
        android:text="@string/tax_label"
        android:textColor="#FFFFFF"
        android:textSize="16sp"
        app:layout_constraintStart_toEndOf="@+id/labelSub"
        app:layout_constraintTop_toBottomOf="@+id/yourOrderTitle" />

    <TextView
        android:id="@+id/taxField"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="136dp"
        android:layout_marginTop="4dp"
        android:textColor="#FFFFFF"
        android:textSize="16sp"
        app:layout_constraintStart_toEndOf="@+id/subtotalField"
        app:layout_constraintTop_toBottomOf="@+id/taxLabel" />

    <Button
        android:id="@+id/addOrderButton"
        android:layout_width="339dp"
        android:layout_height="56dp"
        android:layout_marginBottom="2dp"
        android:text="@string/add_order_button_title"
        app:layout_constraintBottom_toTopOf="@+id/orderListView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/labelSub"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="44dp"
        android:layout_marginTop="35dp"
        android:text="@string/subtotal_label"
        android:textColor="#FFFFFF"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/yourOrderTitle" />

    <TextView
        android:id="@+id/subtotalField"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="44dp"
        android:layout_marginTop="4dp"
        android:textColor="#FFFFFF"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/labelSub" />

    <ListView
        android:id="@+id/orderListView"
        android:layout_width="409dp"
        android:layout_height="534dp"
        android:background="#C3C3C3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>