<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#0B0B0B"
    tools:context=".StoreOrderActivity">

    <EditText
        android:id="@+id/tv_showData"
        android:layout_width="415dp"
        android:layout_height="73dp"
        android:background="@android:color/holo_green_light"
        android:ems="10"
        android:gravity="center"
        android:inputType="textPersonName"
        android:text="@string/store_orders_title"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.096" />

    <Spinner
        android:id="@+id/orderNumSpinner"
        android:layout_width="411dp"
        android:layout_height="76dp"
        android:background="#BCBCBC"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <ListView
        android:id="@+id/orderListview"
        android:layout_width="412dp"
        android:layout_height="428dp"
        android:layout_marginTop="11dp"
        android:background="#AEAEAE"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.666"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/orderNumSpinner" />

    <Button
        android:id="@+id/removeOrderButton"
        android:layout_width="415dp"
        android:layout_height="97dp"
        android:layout_marginTop="12dp"
        android:text="@string/remove_order_button_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/orderListview" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="264dp"
        android:layout_height="27dp"
        android:layout_marginTop="24dp"
        android:text="@string/order_num_label"
        android:textAlignment="textStart"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_showData" />

    <TextView
        android:id="@+id/orderPrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="100dp"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_showData" />
</androidx.constraintlayout.widget.ConstraintLayout>